# Hackathone1-ai-book

./: .gitignore  GEMINI.md  README.md  requirements.txt
backend/: .gitignore  EMBEDDING_PIPELINE_IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  agent.py  api.py  config.py  crawler.py  debug_payloads.py  embedding.py  main.py  models.py  pyproject.toml  rag_api.py  retrieve.py  run_api.py  search.py  setup.py  start_api.bat  storage.py  test_api.py  test_api_suite.py  test_basic_query.py  test_embedding_pipeline.py  test_end_to_end.py  test_error_handling.py  test_final_integration.py  test_health_endpoints.py  test_qdrant.py  test_scenarios.py  test_service_availability.py  utils.py  verify_storage.py
physical-ai-book/: .eslintignore  .npmignore  .prettierignore  docusaurus.config.ts  package-lock.json
specs/001-digital-twin-module/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-intro-physical-ai/: plan.md  research.md  spec.md  tasks.md
specs/001-isaac-robot-brain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-navbar-footer-design/: plan.md  research.md  spec.md  tasks.md
specs/001-physical-ai-homepage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ros2-fundamentals/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-vla-robot-control/: plan.md  research.md  spec.md  tasks.md
specs/1-ai-agent-retrieval/: research.md  (+4 more)
(+125 files in other folders)
